[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/ChargingIndicator.tscn" type="PackedScene" id=3]
[ext_resource path="res://gameArt/pride_logo.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=4]
action = "ui_select"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MainMenu" type="Node2D" parent="."]

[node name="ScoreLabel" type="Label" parent="MainMenu"]
anchor_right = 1.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"

[node name="Stats" type="Label" parent="MainMenu"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 230.0
margin_right = 753.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 1 )
text = "Health: 0
Speed: 0
"

[node name="LevelLabel" type="Label" parent="MainMenu"]
anchor_right = 1.0
margin_left = 791.129
margin_top = 2.50734
margin_right = 1080.13
margin_bottom = 60.5073
rect_pivot_offset = Vector2( 56.091, 39.1855 )
custom_fonts/font = SubResource( 1 )
text = "Level: 1"

[node name="HealthLabel" type="Label" parent="MainMenu"]
anchor_right = 1.0
margin_left = 775.129
margin_top = 51.5073
margin_right = 1079.13
margin_bottom = 109.507
rect_pivot_offset = Vector2( 56.091, 39.1855 )
custom_fonts/font = SubResource( 1 )
text = "Health: 100"

[node name="MessageLabel" type="Label" parent="MainMenu"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 291.904
margin_top = 629.906
margin_right = 822.904
margin_bottom = 707.906
custom_fonts/font = SubResource( 2 )
text = "Rogue + Galaga"
align = 1

[node name="StartButton" type="Button" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 312.226
margin_top = 978.479
margin_right = 512.226
margin_bottom = 1078.48
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="MainMenu"]
wait_time = 2.0
one_shot = true

[node name="MenuButton" type="Button" parent="MainMenu"]
margin_left = 612.226
margin_top = 978.479
margin_right = 813.226
margin_bottom = 1078.48
custom_fonts/font = SubResource( 6 )
text = "Menu"

[node name="ExitGameLabel" type="Label" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 398.344
margin_top = 1270.85
margin_right = 722.344
margin_bottom = 1309.85
custom_fonts/font = SubResource( 7 )
text = "Press \"ESC\" to quit"
align = 1

[node name="ChargingIndicator" parent="MainMenu" instance=ExtResource( 3 )]

[node name="PowerUpIndicator" type="Sprite" parent="MainMenu"]
visible = false
position = Vector2( 41.7545, 85.1792 )
scale = Vector2( 0.05, 0.05 )
z_index = 2
texture = ExtResource( 4 )

[node name="Tween" type="Tween" parent="MainMenu"]

[node name="SettingsMenu" type="Node2D" parent="."]
visible = false

[node name="ShowCreditsButton" type="Button" parent="SettingsMenu"]
margin_left = 86.313
margin_top = 123.298
margin_right = 544.313
margin_bottom = 207.298
custom_fonts/font = SubResource( 8 )
text = "Show Credits"

[node name="ShowLicenseButton" type="Button" parent="SettingsMenu"]
margin_left = 90.2935
margin_top = 293.797
margin_right = 548.294
margin_bottom = 377.797
custom_fonts/font = SubResource( 8 )
text = "Show License"

[node name="BackToGameButton" type="Button" parent="SettingsMenu"]
margin_left = 81.9902
margin_top = 491.221
margin_right = 559.99
margin_bottom = 575.221
custom_fonts/font = SubResource( 9 )
text = "Back to Game"

[node name="CreditsLayer" type="Node2D" parent="SettingsMenu"]
visible = false
position = Vector2( 20, 20 )

[node name="CreditsBkgd" type="ColorRect" parent="SettingsMenu/CreditsLayer"]
margin_right = 600.0
margin_bottom = 700.0
color = Color( 0.180392, 0.196078, 0.298039, 1 )

[node name="Credits" type="Label" parent="SettingsMenu/CreditsLayer"]
margin_right = 603.0
margin_bottom = 702.0
text = "Credits: 

-- Game Programming --
nightdelivery123
discoPiranha

-- Art -- 

By Gilbert Baker, Tomislav TodoroviÄ‡ - https://www.crwflags.com/fotw/flags/qq-rb.html#9new, CC BY-SA 4.0, 
\"Seamless Space\" by n4, from
https://opengameart.org/content/seamless-space-stars

\"Space Shooter Redux\" by Kenney.nl
https://opengameart.org/content/space-shooter-redux


-- Music -- 
\"Through Space\" by Maxstack, from
 https://opengameart.org/content/through-space
"
align = 1
valign = 1

[node name="ExitCredits" type="Button" parent="SettingsMenu/CreditsLayer"]
margin_left = 23.0
margin_top = 17.0
margin_right = 64.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 10 )
text = "X"

[node name="LicenseLayer" type="Node2D" parent="SettingsMenu"]
visible = false
position = Vector2( 20, 20 )

[node name="LicenseBkgd" type="ColorRect" parent="SettingsMenu/LicenseLayer"]
margin_right = 600.0
margin_bottom = 700.0
color = Color( 0.180392, 0.196078, 0.298039, 1 )

[node name="License" type="Label" parent="SettingsMenu/LicenseLayer"]
margin_right = 598.0
margin_bottom = 671.0
text = "Godot Engine:
Copyright (c) 2007-2019 Juan Linietsky, Ariel Manzur.
Copyright (c) 2014-2019 Godot Engine contributors.

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \"Software\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, 
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES 
OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE 
AND NONINFRINGEMENT.  IN NO EVENT SHALL THE AUTHORS OR 
COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, 
ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE 
OR THE USE OR OTHER  DEALINGS IN THE SOFTWARE.

-- Godot Engine <https://godotengine.org>"
align = 1
valign = 1

[node name="ExitLicense" type="Button" parent="SettingsMenu/LicenseLayer"]
margin_left = 23.0
margin_top = 17.0
margin_right = 64.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 10 )
text = "X"
[connection signal="pressed" from="MainMenu/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MainMenu/MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="MainMenu/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="SettingsMenu/ShowCreditsButton" to="." method="_on_ShowCreditsButton_pressed"]
[connection signal="pressed" from="SettingsMenu/ShowLicenseButton" to="." method="_on_ShowLicenseButton_pressed"]
[connection signal="pressed" from="SettingsMenu/BackToGameButton" to="." method="_on_BackToGameButton_pressed"]
[connection signal="pressed" from="SettingsMenu/CreditsLayer/ExitCredits" to="." method="_on_ExitCredits_pressed"]
[connection signal="pressed" from="SettingsMenu/LicenseLayer/ExitLicense" to="." method="_on_ExitLicense_pressed"]
